# Miaou

./: .cproject  .gitinore  .project  CMakeLists.txt  Makefile  README.md  TO_DO.txt  create-project-files.sh  ok.txt
.dep/: game.d
client/: Makefile
jalon01/: client.c  config.h  server.c
jalon02/: CMakeLists.txt
jalon02/client/: client.c  client.h
jalon02/commons/architecture_prof/: network.h
jalon02/server/: server_app.c
jalon03/: CMakeCache.txt  Makefile  RE216_JALON03_CLIENT  RE216_JALON03_SERVER  cmake_install.cmake
jalon03/client/: client.c  client.h
jalon03/commons/: config.h
jalon03/server/: server_app.c
jalon04/: CMakeLists.txt
jalon04/client/: client.c  client.h
jalon04/commons/: basic.c  basic.h  config.h
jalon04/server/: channel.c  channel.h  commands.c  commands.h  server.h  server_app.c
jalon05/: CMakeLists.txt
jalon05/client/: client.c  client.h
jalon05/commons/: basic.c  basic.h  config.h
jalon05/server/: channel.h  commands.c  commands.h  server_app.c
jalon06/: CMakeLists.txt
jalon06/client/: client.c  client.h
jalon06/commons/: basic.c  basic.h  config.h
jalon06/server/: channel.c  commands.c  server_app.c
server/: Makefile
server/.dep/: main.d
server/src/: main.c
test/: client  client.c
test/sub/: send.txt  server  server.c
